# learnopencv

./: .gitignore  LICENSE  Modified_seg.ipynb  OCR_comparison.ipynb  PYTHON_UTILITIES_README.md  README.md  bgrtrackbar.py  binomialheap.cpp  build_all.sh  demo.py  image_processor_app.py  image_utils.py  requirements.txt
Building-An-Automated-Image-Annotation-Tool-PyOpenAnnotate/: LICENSE  MANIFEST.in  README.md  pyproject.toml
Building-An-Automated-Image-Annotation-Tool-PyOpenAnnotate/src/annotation/: annotate.py  filters.py  utils.py
Building-An-Automated-Image-Annotation-Tool-PyOpenAnnotate/src/example/: names.txt
Building-An-Automated-Image-Annotation-Tool-PyOpenAnnotate/src/example/labels/: img-1.txt  img-10.txt  img-11.txt  img-12.txt  img-13.txt  img-14.txt  img-15.txt  img-16.txt  img-17.txt  img-18.txt  img-19.txt  img-2.txt  img-20.txt  img-21.txt  img-22.txt  img-23.txt  img-24.txt  img-25.txt  img-26.txt  img-27.txt  img-28.txt  img-29.txt  img-3.txt  img-30.txt  img-31.txt  img-32.txt  img-33.txt  img-34.txt  img-35.txt  img-36.txt  img-37.txt  img-38.txt  img-39.txt  img-4.txt  img-40.txt  img-41.txt  img-42.txt  img-43.txt  img-44.txt  img-45.txt  (+10 more)
Building-An-Automated-Image-Annotation-Tool-PyOpenAnnotate/src/tools/: visualize.py
Building_Autonomous_Vehicle_in_Carla_Path_Following_with_PID_Control_ROS2/src/carla_msgs/: CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  package.xml
Building_Autonomous_Vehicle_in_Carla_Path_Following_with_PID_Control_ROS2/src/carla_msgs/msg/: CarlaActorInfo.msg  CarlaActorList.msg  CarlaBoundingBox.msg  CarlaCollisionEvent.msg  CarlaControl.msg  CarlaEgoVehicleControl.msg  CarlaEgoVehicleInfo.msg  CarlaEgoVehicleInfoWheel.msg  CarlaEgoVehicleStatus.msg  CarlaLaneInvasionEvent.msg  CarlaStatus.msg  CarlaTrafficLightInfo.msg  CarlaTrafficLightInfoList.msg  CarlaTrafficLightStatus.msg  CarlaTrafficLightStatusList.msg  CarlaWalkerControl.msg  CarlaWeatherParameters.msg  CarlaWorldInfo.msg
Building_Autonomous_Vehicle_in_Carla_Path_Following_with_PID_Control_ROS2/src/carla_msgs/srv/: DestroyObject.srv  GetBlueprints.srv  SpawnObject.srv
Building_Autonomous_Vehicle_in_Carla_Path_Following_with_PID_Control_ROS2/src/pcl_conversions/: CHANGELOG.rst  CMakeLists.txt  README.rst  package.xml
CI/: CMakeLists.txt  Dockerfile  build_one.sh
CameraCalibration/: CMakeLists.txt  README.md  cameraCalibration.cpp  cameraCalibration.py  cameraCalibrationWithUndistortion.cpp  cameraCalibrationWithUnistortion.cpp
Depth-Perception-Using-Stereo-Camera/cpp/: CMakeLists.txt  disparity2depth_calib.cpp  disparity_params_gui.cpp  obstacle_avoidance.cpp
EigenFace/: CMakeLists.txt  EigenFace.cpp  EigenFace.py  README.md
EigenFace/.ipynb_checkpoints/: EigenFace-checkpoint.ipynb
FaceDetectionComparison/: CMakeLists.txt  README  README.md  face_detection_dlib_hog.cpp  face_detection_dlib_hog.py  face_detection_dlib_mmod.cpp  face_detection_dlib_mmod.py  face_detection_opencv_dnn.cpp  face_detection_opencv_dnn.py  face_detection_opencv_haar.cpp  face_detection_opencv_haar.py  run-all.cpp  run-all.py
ImageMetrics/C++/: CMakeCache.txt  CMakeLists.txt  Makefile  allrange  brisque.cpp  brisque.h  brisquequality  cmake_install.cmake  computescore.cpp  main.cpp  sample.cpp  trainModel.cpp
ImageMetrics/C++/libsvm/: README  svm-predict  svm-scale  svm-scale.c  svm-train  svm-train.c  svm.cpp  svm.def  svm.h
ImageMetrics/C++/livedbfiles/: dmos.txt  orgs.txt  ref_imnames.txt
Improving-Illumination-in-Night-Time-Images/cpp/: CMakeLists.txt  brighten.cpp  guidedfilter.cpp  guidedfilter.h
LeGO LOAM ROS2/LeGO-LOAM/: CMakeLists.txt
LeGO LOAM ROS2/LeGO-LOAM/src/: featureAssociation.cpp  imageProjection.cpp  imageProjection.h  main.cpp  mapOptimization.h
LeGO-LOAM-ROS2/LeGO-LOAM/: package.xml
LeGO-LOAM-ROS2/LeGO-LOAM/config/: loam_config.yaml  qos.yaml
LeGO-LOAM-ROS2/LeGO-LOAM/launch/: run.launch.py
LeGO-LOAM-ROS2/LeGO-LOAM/rviz/: pink_scan.rviz  test.rviz
LeGO-LOAM-ROS2/LeGO-LOAM/src/: featureAssociation.h  mapOptmization.cpp  transformFusion.cpp  transformFusion.h
LeGO-LOAM-ROS2/cloud_msgs/: CMakeLists.txt  package.xml
LeGO-LOAM-ROS2/cloud_msgs/msg/: CloudInfo.msg
OCR/: CMakeLists.txt  README.md  ocr_simple.cpp  ocr_simple.py  ocr_simple.sh  requirements.txt
OpenPose/: CMakeLists.txt  OpenPoseImage.cpp  OpenPoseImage.py  OpenPoseVideo.cpp  OpenPoseVideo.py  OpenPose_Notebook.ipynb  README  README.md  getModels.sh
OpenPose-Multi-Person/: .gitignore  CMakeLists.txt  README  README.md  getModels.sh  multi-person-openpose.cpp  multi-person-openpose.ipynb  multi-person-openpose.py
OpenPose/pose/coco/: pose_deploy_linevec.prototxt
OpenVINO-OpenCV/: CMakeLists.txt  README.md  image-classification.cpp  image-classification.py
PyTorch-ONNX-TensorRT-CPP/: CMakeLists.txt  FindTensorRT.cmake  README.md  requirements.txt  resnet50.onnx  trt_inference.py  trt_sample.cpp
SVM_Python_Cpp/: CMakeLists.txt  README.md  SVM_Classification.cpp  SVM_Classification.py  SVM_Regression.cpp  SVM_Regression.py  svm-predict.c  svm-train.c  svm.cpp  svm.h
Super-Resolution-in-OpenCV/: CMakeLists.txt  README.md  super_res.cpp
VideoStabilization/: .gitignore  CMakeLists.txt  README.md  video_stabilization.cpp  video_stabilization.py
WeChat-QRCode-Scanner-OpenCV/Cpp/: CMakeLists.txt  README.md  wechatQRcodeReader.cpp
barcode-QRcodeScanner/: CMakeLists.txt  README.md  barcode-QRcodeScanner.cpp  barcode-QRcodeScanner.py  barcode-QRcodeScannerPy2.py
industrial_cv_TensorRT_cpp/: CMakeLists.txt  README.md  inferutils.cpp  inferutils.h  sample.cpp
otsu-method/: CMakeLists.txt  Implementation (2).ipynb  Implementation.cpp  Otsu_method.cpp  README.md  dataPath.hpp  includeLibraries.h  otsu_implementation.cpp  otsu_implementation.py  otsu_method.ipynb  otsu_method.py
pymodule/: .gitignore  CMakeLists.txt  README.md  bv.cpp  bvtest.py  gen2.py  hdr_parser.py  headers.txt
pymodule/src/: bvmodule.cpp  bvmodule.hpp
qt-test/: CMakeLists.txt  README.md  camviewer.cpp  camviewer.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt-test.pro
(+4189 files in other folders)
