#SPECIFY THE MINIMUM VERSION OF CMAKE REQUIRED
cmake_minimum_required(VERSION 2.8.12)

#SPECIFY YOUR PROJECT NAME
PROJECT(Project_Name)

#SET PATH TO OPENCV CMAKE CONFIG FILES
#SET(OpenCV_DIR C:\\Users\\Administrator\\opencv-4.1.0\\Installation\\x64\\vc15\\staticlib)

#ENABLE C++11
SET(CMAKE_CXX_STANDARD 11)
SET(CMAKE_CXX_STANDARD_REQUIRED TRUE)

#SET CMAKE CXX FLAGS
SET(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
SET(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")


#MAKE SURE OPENCV IS INSTALLED CORRECTLY
find_package( OpenCV REQUIRED )

#INCLUDE OPENCV DIRECTORIES
include_directories( ${OpenCV_INCLUDE_DIRS})

#MACRO TO COMPILE CPP FILES
MACRO(add_example name)
  ADD_EXECUTABLE(${name} ${name}.cpp)
  TARGET_LINK_LIBRARIES(${name} ${OpenCV_LIBS} )
ENDMACRO()

#COMPILE CPP FILES USING THIS LINE
add_example(otsu_implementation)
add_example(otsu_method)
#add_example(sampleCode2) and so on
