<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cloud_msgs</name>
  <version>1.0.0</version>
  <description>ROS2 messages for pointclouds</description>

  <maintainer email="eduardo.perdices@star-robotics.com">Eduardo Perdices</maintainer>

  <author>Tixiao Shan</author>
  <author>Eduardo Perdices</author>

  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
