<?xml version="1.0"?>
<package format="2">
  <name>pcl_conversions</name>
  <version>2.6.1</version>
  <description>Provides conversions from PCL data types and ROS message types</description>

  <author email="william@osrfoundation.org">William Woodall</author>
  <author email="paul@bovbel.com">Paul Bovbel</author>
  <author email="bill@neautomation.com">Bill Morris</author>
  <author email="ankl@kth.se">Andreas Klintberg</author>

  <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>
  <maintainer email="www.kentaro.wada@gmail.com">Kentaro Wada</maintainer>
  <maintainer email="stevenmacenski@gmail.com">Steve Macenski</maintainer>

  <license>BSD</license>

  <url>http://wiki.ros.org/pcl_conversions</url>
  <url type="repository">https://github.com/ros-perception/perception_pcl</url>
  <url type="bugtracker">https://github.com/ros-perception/perception_pcl/issues</url>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>libpcl-all-dev</build_depend>

  <build_export_depend>libpcl-all-dev</build_export_depend>

  <depend>eigen</depend>
  <depend>message_filters</depend>
  <depend>pcl_msgs</depend>
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>libpcl-common</exec_depend>
  <exec_depend>libpcl-io</exec_depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
